crates/carta/tests/snapshots/golden_writer__html__common__footnote-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>ref<a href="#fn1" class="footnote-ref" id="fnref1"
role="doc-noteref"><sup>1</sup></a></p>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1"><p>the note body<a href="#fnref1" class="footnote-back"
role="doc-backlink">↩︎</a></p></li>
</ol>
</section>
