crates/carta/tests/snapshots/golden_writer__html__common__header-unnumbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<h1 class="unnumbered" id="hidden">Hidden</h1>
