crates/carta/tests/snapshots/golden_writer__html__common__horizontal-rule.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>above</p>
<hr />
<p>below</p>
