crates/carta/tests/snapshots/golden_writer__html__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>an <img src="pic.png" alt="alt words" /> inline</p>
