crates/carta/tests/snapshots/golden_writer__html__common__inline-code-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>before
<code>a &amp; b ~ c \ d % e # f $ g _ h { i } j ^ k | l &lt; m &gt; n</code>
after</p>
