crates/carta/tests/snapshots/golden_writer__html__common__inline-code.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>a <code>let x = 1;</code> b</p>
