crates/carta/tests/snapshots/golden_writer__html__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>before <a href="http://example.com"></a> after</p>
